# bolt-tightening-system

./: .gitignore  CLAUDE.md  create_project_structure.py  main.py  rebuild.md  变量表.csv
config/: motors.yaml  system.yaml  users.yaml
src/models/: app_state.py  motor_config.py
src/services/: camera_service.py  pcl_service.py  plc_service.py
src/ui/: main_window.py  styles.py
src/ui/pages/: data_recording_page.py  motor_control_page.py  vision_page.py
src/ui/widgets/: motor_widget.py  right_panel.py  status_indicator.py
src/utils/: app_logger.py  config_manager.py
test_total/test_total/: CMakeLists.txt  camera_worker.py  config.py  main.py  pcl_bridge.py  plc_worker.py  ui_widgets.py
test_total/test_total/src/: main.cpp  pipeline_cli.cpp  point_cloud_pipeline.cpp  point_cloud_pipeline.h  point_cloud_processor.cpp  point_cloud_processor.h  pybind_wrapper.cpp
